Aug Thales Scope expansion/nerf, Updated configs

--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
@@ -108,7 +108,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.019825, 0.009891, -0.003555
 ;==============================================================================		
 ![wpn_ump45_custom]
-scopes 	= acog, eot, specter, c-more, 0kp2, ac10632, aimpoint, point_aimpro, e0t2, compm4s, rakurs, kemper, mepro, ekp8_18
+<scopes 					            = leupold, marchf, mark8_rmr
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
