--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -68,6 +68,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_9a91_1p29]
         scope_zoom_factor                = 30
         scope_texture                    =
+		scope_dynamic_zoom               = off			
 ![wpn_9a91_1p29_hud]
         aim_hud_offset_pos               = -0.06166, 0.012136, -0.085442
         aim_hud_offset_pos_16x9          = -0.06166, 0.012136, -0.085442
@@ -77,12 +78,16 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_9a91_usp1]
         scope_zoom_factor                = 30
         scope_texture                    =
+		scope_dynamic_zoom               = off		
 ![wpn_9a91_usp1_hud]
         aim_hud_offset_pos               = -0.06166, 0.012136, -0.085442
         aim_hud_offset_pos_16x9          = -0.06166, 0.012136, -0.085442
         aim_hud_offset_rot               = 0.040179, 0.004421, -0.060687
         aim_hud_offset_rot_16x9          = 0.040179, 0.004421, -0.060687
-		
+        hands_orientation                = 0.518, 1.530533, -4.130005
+        hands_orientation_16x9           = 0.518, 1.530533, -4.130005
+        hands_position                   = 0.010917, -0.022856, -0.056946
+        hands_position_16x9              = 0.010917, -0.022856, -0.056946	
 ![wpn_9a91_1p78gs]
         scope_zoom_factor                = 42.86
         scope_texture                    =	
@@ -110,6 +115,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = -0.054514, 0.043414, -0.068259
         aim_hud_offset_rot               = 0.043515, 0.003844, -0.060687
         aim_hud_offset_rot_16x9          = 0.043515, 0.003844, -0.060687
+        hands_orientation                = 0.4948, 1.81, -4.130005
+        hands_orientation_16x9           = 0.4948, 1.81, -4.130005
+        hands_position                   = 0.019217, -0.032445, -0.034493
+        hands_position_16x9              = 0.019217, -0.032445, -0.034493
 		
 ![wpn_9a91_pso2]
         scope_zoom_factor                = 30
@@ -605,6 +614,7 @@ item_visual                              = dynamics\weapons\wpn_aug_a3_custom_ba
 ;==============================================================================		
 ![wpn_aug_merc]
 parent_section				 = wpn_aug_merc
+>scopes						 = triji, spec_alt, mark8_rmr
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -625,6 +635,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 	magnification = 4	
         scope_zoom_factor                = 30
         scope_texture                    =
+
 ![wpn_aug_merc_specter_hud]		
         aim_hud_offset_pos               = -0.059393, 0.017409, -0.081795
         aim_hud_offset_pos_16x9          = -0.059393, 0.017409, -0.081795
@@ -642,6 +653,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 	magnification = 8
         scope_zoom_factor                = 15
 		scope_texture                    =
+use_alt_aim_hud                   = false			
 ![wpn_aug_merc_leupold_hud]
         aim_hud_offset_pos               = -0.059565, 0.015787, -0.046001
         aim_hud_offset_pos_16x9          = -0.059565, 0.015787, -0.046001
@@ -679,28 +691,128 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 5
 		min_scope_zoom_factor			 = 40
         scope_texture                    =
+use_alt_aim_hud                   = false				
 ![wpn_aug_merc_marchf_hud]
         aim_hud_offset_pos               = -0.058346, 0.020457, -0.071296
         aim_hud_offset_pos_16x9          = -0.058346, 0.020457, -0.071296
         aim_hud_offset_rot               = 0.004402, -0.003401, 0.001
         aim_hud_offset_rot_16x9          = 0.004402, -0.003401, 0.001
-        aim_hud_offset_alt_pos           = -0.092232, -0.037837, -0.004757
-        aim_hud_offset_alt_pos_16x9      = -0.092232, -0.037837, -0.004757
-        aim_hud_offset_alt_rot           = 0, 0, 0.76
-        aim_hud_offset_alt_rot_16x9      = 0, 0, 0.76
 		
 ![wpn_aug_merc_acog]
+!inv_grid_x                               = 10	
+!inv_grid_y                               = 0
+1icon_layer			    = acog
+1icon_layer_x			= 80
+1icon_layer_y			= -14
 	3ds_reticle_size = 8
 	3ds_shadow_project = 4
 	3ds_type = 3
 	magnification = 2.8
         scope_zoom_factor                = 42.86
 		scope_texture                    =	
+use_alt_aim_hud                   = false		
 ![wpn_aug_merc_acog_hud]
         aim_hud_offset_pos               = -0.059303, 0.018823, -0.060745
         aim_hud_offset_pos_16x9          = -0.059303, 0.018823, -0.060745
         aim_hud_offset_rot               = 0.01117, -0.003409, 0.001
         aim_hud_offset_rot_16x9          = 0.01117, -0.003409, 0.001
+
+;----------------------------------------------------------------------------------------------------------------------------
+[wpn_aug_merc_triji]:wpn_aug_merc
+
+inv_grid_x                               = 10	
+inv_grid_y                               = 0
+
+inv_weight			= 3.520
+
+		scope_status					 = 1
+        scope_zoom_factor                = 42.86
+zoom_rotate_time		                           = 0.25		
+hud					                               = wpn_aug_merc_triji_hud
+use_alt_aim_hud                   = true		
+
+	3ds_reticle_size = 8
+	3ds_shadow_project = 4
+	3ds_type = 3
+	magnification = 2.8
+
+[wpn_aug_merc_triji_hud]:wpn_aug_merc_hud
+item_visual                              = anomaly_weapons\wpn_aug_thales\wpn_aug_thales_triji_hud.ogf
+        aim_hud_offset_alt_pos           = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_pos_16x9      = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_rot           = 0, 0, 0.76
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0.76
+        aim_hud_offset_pos               = -0.059303, 0.018823, -0.060745
+        aim_hud_offset_pos_16x9          = -0.059303, 0.018823, -0.060745
+        aim_hud_offset_rot               = 0.01117, -0.003409, 0.001
+        aim_hud_offset_rot_16x9          = 0.01117, -0.003409, 0.001	
+;----------------------------------------------------------------------------------------------------------------------------
+[wpn_aug_merc_spec_alt]:wpn_aug_merc
+
+hud					= wpn_aug_merc_spec_alt_hud
+
+1icon_layer                              = specter
+1icon_layer_x                            = 65
+1icon_layer_y                            = -17
+
+inv_weight                                         = 3.620
+		scope_status					 = 1
+        scope_zoom_factor                = 30
+scope_dynamic_zoom                                 = on		
+zoom_rotate_time		                           = 0.25
+use_alt_aim_hud                   = true	
+	
+	3ds_reticle_size = 7.3
+	3ds_shadow_project = 3.2
+	3ds_ffp_min_zoom = 46		
+	3ds_type = 5
+	ms_count = 2
+	ms_colors = scope_black, scope_red	
+	magnification = 4	
+	
+[wpn_aug_merc_spec_alt_hud]:wpn_aug_merc_hud
+item_visual                              = anomaly_weapons\wpn_aug_thales\wpn_aug_thales_specalt_hud.ogf
+        aim_hud_offset_alt_pos           = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_pos_16x9      = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_rot           = 0, 0, 0.76
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0.76
+        aim_hud_offset_pos               = -0.059393, 0.017409, -0.081795
+        aim_hud_offset_pos_16x9          = -0.059393, 0.017409, -0.081795
+        aim_hud_offset_rot               = 0.004313, -0.003549, 0
+        aim_hud_offset_rot_16x9          = 0.004313, -0.003549, 0
+;-------------------------------------------------------------------------------------------------------------------------------
+[wpn_aug_merc_mark8_rmr]:wpn_aug_merc
+
+hud					= wpn_aug_merc_mark8_rmr_hud
+
+        scope_zoom_factor                = 15
+		scope_status					 = 1
+		
+1icon_layer                              = leupold
+1icon_layer_x                            = 65
+1icon_layer_y                            = -11
+
+inv_weight                                         = 3.620
+zoom_rotate_time		                           = 0.25
+use_alt_aim_hud                   = true		
+scope_dynamic_zoom                                 = on
+
+	3ds_reticle_size = 4.5
+	3ds_shadow_project = 3.6
+	3ds_ffp_min_zoom = 32
+	magnification = 8
+
+[wpn_aug_merc_mark8_rmr_hud]:wpn_aug_merc_hud
+item_visual                              = anomaly_weapons\wpn_aug_thales\wpn_aug_thales_mark8_hud.ogf
+        aim_hud_offset_alt_pos           = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_pos_16x9      = -0.092232, -0.037837, -0.004757
+        aim_hud_offset_alt_rot           = 0, 0, 0.76
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0.76
+        aim_hud_offset_pos               = -0.059565, 0.015787, -0.046001
+        aim_hud_offset_pos_16x9          = -0.059565, 0.015787, -0.046001
+        aim_hud_offset_rot               = 0.004619, -0.003443, 0.001
+        aim_hud_offset_rot_16x9          = 0.004619, -0.003443, 0.001
+;-------------------------------------------------------------------------------------------------------------------------------		
 ;==============================================================================
 ![wpn_fal_aus_kit_aus_tri]
 	3ds_reticle_size = 8
@@ -714,20 +826,19 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 ![wpn_fal_aus_kit_aus_tri_hud]
-        aim_hud_offset_pos               = -0.071752, 0.001637, -0.123006
-        aim_hud_offset_pos_16x9          = -0.071752, 0.001637, -0.123006
-        aim_hud_offset_rot               = 0.010748, -0.003402, 0
-        aim_hud_offset_rot_16x9          = 0.010748, -0.003402, 0
-        aim_hud_offset_alt_pos           = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_pos_16x9      = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_rot           = -0.00164, -0.003711, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.00164, -0.003711, 0.8
+        aim_hud_offset_pos               = -0.07016, -0.012864, -0.165117
+        aim_hud_offset_pos_16x9          = -0.07016, -0.012864, -0.165117
+        aim_hud_offset_rot               = -0.013493, -0.024924, 0
+        aim_hud_offset_rot_16x9          = -0.013493, -0.024924, 0
+        aim_hud_offset_alt_pos           = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_pos_16x9      = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_rot           = -0.021031, -0.017624, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.021031, -0.017624, 0.78
 		
 ![wpn_fal_aus_kit_sa5x_spec]
 	3ds_reticle_size = 7.3
 	3ds_shadow_project = 3.2
-	3ds_ffp_min_zoom = 46	
-	3ds_type = 5
+	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red
 	magnification = 4	
@@ -740,14 +851,14 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 ![wpn_fal_aus_kit_sa5x_spec_hud]
-        aim_hud_offset_pos               = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_pos_16x9          = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_rot               = 0.004285, -0.003421, 0
-        aim_hud_offset_rot_16x9          = 0.004285, -0.003421, 0
-        aim_hud_offset_alt_pos           = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_pos_16x9      = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_rot           = -0.00164, -0.003711, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.00164, -0.003711, 0.8
+        aim_hud_offset_pos               = -0.071993, -0.015641, -0.153134
+        aim_hud_offset_pos_16x9          = -0.071993, -0.015641, -0.153134
+        aim_hud_offset_rot               = -0.020509, -0.017074, 0
+        aim_hud_offset_rot_16x9          = -0.020509, -0.017074, 0
+        aim_hud_offset_alt_pos           = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_pos_16x9      = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_rot           = -0.021031, -0.017624, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.021031, -0.017624, 0.78
 		
 ![wpn_fal_aus_kit_fal_leup]
 	3ds_reticle_size = 4.5
@@ -763,43 +874,39 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 ![wpn_fal_aus_kit_fal_leup_hud]
-        aim_hud_offset_pos               = -0.071504, -0.000646, -0.101141
-        aim_hud_offset_pos_16x9          = -0.071504, -0.000646, -0.101141
-        aim_hud_offset_rot               = 0.005569, -0.003722, 0
-        aim_hud_offset_rot_16x9          = 0.005569, -0.003722, 0
-        aim_hud_offset_alt_pos           = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_pos_16x9      = -0.084342, -0.059836, -0.11
-        aim_hud_offset_alt_rot           = -0.00164, -0.003711, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.00164, -0.003711, 0.8
+        aim_hud_offset_pos               = -0.070243, -0.020047, -0.137174
+        aim_hud_offset_pos_16x9          = -0.070243, -0.020047, -0.137174
+        aim_hud_offset_rot               = -0.019612, -0.025113, 0
+        aim_hud_offset_rot_16x9          = -0.019612, -0.025113, 0
+        aim_hud_offset_alt_pos           = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_pos_16x9      = -0.075819, -0.068926, -0.11
+        aim_hud_offset_alt_rot           = -0.021031, -0.017624, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.021031, -0.017624, 0.78
 ;==============================================================================
 ![wpn_fal_sa58_osw]
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
-![wpn_fal_sa58_osw_hud]
-        aim_hud_offset_pos               = -0.071357, 0.032233, -0.080882
-        aim_hud_offset_pos_16x9          = -0.071357, 0.032233, -0.080882
-        aim_hud_offset_rot               = -0.000343, -0.002284, 0.000354
-        aim_hud_offset_rot_16x9          = -0.000343, -0.002284, 0.000354
+
 ![wpn_fal_sa58_osw_acog]
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_fal_sa58_osw_acog_hud]
-        aim_hud_offset_pos               = -0.07212, 0.0009, -0.112178
-        aim_hud_offset_pos_16x9          = -0.07212, 0.0009, -0.112178
-        aim_hud_offset_rot               = 0.010948, -0.003509, 0
-        aim_hud_offset_rot_16x9          = 0.010948, -0.003509, 0
+        aim_hud_offset_pos               = -0.0829, -0.004432, -0.180953
+        aim_hud_offset_pos_16x9          = -0.0829, -0.004432, -0.180953
+        aim_hud_offset_rot               = 0.003467, 0.003132, 0
+        aim_hud_offset_rot_16x9          = 0.003467, 0.003132, 0
 		
 ![wpn_fal_sa58_osw_specter]
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_specter_hud]		
-        aim_hud_offset_pos               = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_pos_16x9          = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_rot               = 0.004285, -0.003421, 0
-        aim_hud_offset_rot_16x9          = 0.004285, -0.003421, 0
+        aim_hud_offset_pos               = -0.084848, -0.007182, -0.167908
+        aim_hud_offset_pos_16x9          = -0.084848, -0.007182, -0.167908
+        aim_hud_offset_rot               = -0.002854, 0.010983, 0
+        aim_hud_offset_rot_16x9          = -0.002854, 0.010983, 0
         aim_hud_offset_alt_pos           = -0.071794, -0.027431, -0.105762
         aim_hud_offset_alt_pos_16x9      = -0.071794, -0.027431, -0.105762
         aim_hud_offset_alt_rot           = 0.00546, -0.001308, 0
@@ -810,10 +917,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 		scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_leupold_hud]
-        aim_hud_offset_pos               = -0.071776, 0.000567, -0.10754
-        aim_hud_offset_pos_16x9          = -0.071776, 0.000567, -0.10754
-        aim_hud_offset_rot               = 0.004588, -0.003571, 0
-        aim_hud_offset_rot_16x9          = 0.004588, -0.003571, 0
+        aim_hud_offset_pos               = -0.083033, -0.011666, -0.152381
+        aim_hud_offset_pos_16x9          = -0.083033, -0.011666, -0.152381
+        aim_hud_offset_rot               = -0.002188, 0.003162, 0
+        aim_hud_offset_rot_16x9          = -0.002188, 0.003162, 0
 		
 ![wpn_fal_sa58_osw_pn23]
         scope_zoom_factor                = 30
@@ -821,33 +928,33 @@ lewd_lens_hide_aim_mode      = true, false, false
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on
 ![wpn_fal_sa58_osw_pn23_hud]
-        aim_hud_offset_pos               = -0.072554, -0.007168, -0.120852
-        aim_hud_offset_pos_16x9          = -0.072554, -0.007168, -0.120852
-        aim_hud_offset_rot               = 0.004349, -0.003697, 0
-        aim_hud_offset_rot_16x9          = 0.004349, -0.003697, 0
+        aim_hud_offset_pos               = -0.083518, -0.014316, -0.167783
+        aim_hud_offset_pos_16x9          = -0.083518, -0.014316, -0.167783
+        aim_hud_offset_rot               = -0.002998, 0.00842, 0
+        aim_hud_offset_rot_16x9          = -0.002998, 0.00842, 0
 
 ![wpn_fal_sa58_osw_gauss_sight]
         scope_zoom_factor                = 12
         scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_gauss_sight_hud]
-        aim_hud_offset_pos               = -0.072343, 0.000983, -0.101
-        aim_hud_offset_pos_16x9          = -0.072343, 0.000983, -0.101
-        aim_hud_offset_rot               = 0.004558, -0.003869, 0
-        aim_hud_offset_rot_16x9          = 0.004558, -0.003869, 0
+        aim_hud_offset_pos               = -0.085218, -0.006086, -0.138058
+        aim_hud_offset_pos_16x9          = -0.085218, -0.006086, -0.138058
+        aim_hud_offset_rot               = -0.002827, 0.010095, 0
+        aim_hud_offset_rot_16x9          = -0.002827, 0.010095, 0
 
 ![wpn_fal_sa58_osw_susat]
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_fal_sa58_osw_susat_hud]
-        aim_hud_offset_alt_pos           = -0.072422, -0.032127, -0.113258
-        aim_hud_offset_alt_pos_16x9      = -0.072422, -0.032127, -0.113258
-        aim_hud_offset_alt_rot           = 0.007899, 0.000501, 0
-        aim_hud_offset_alt_rot_16x9      = 0.007899, 0.000501, 0
-        aim_hud_offset_pos               = -0.071548, -0.010995, -0.113258
-        aim_hud_offset_pos_16x9          = -0.071548, -0.010995, -0.113258
-        aim_hud_offset_rot               = 0.003912, -0.003475, 0
-        aim_hud_offset_rot_16x9          = 0.003912, -0.003475, 0
+        aim_hud_offset_alt_pos           = -0.08585, -0.038196, -0.153984
+        aim_hud_offset_alt_pos_16x9      = -0.08585, -0.038196, -0.153984
+        aim_hud_offset_alt_rot           = 0.001136, 0.014027, 0
+        aim_hud_offset_alt_rot_16x9      = 0.001136, 0.014027, 0
+        aim_hud_offset_pos               = -0.084337, -0.017715, -0.153984
+        aim_hud_offset_pos_16x9          = -0.084337, -0.017715, -0.153984
+        aim_hud_offset_rot               = -0.003585, 0.008668, 0
+        aim_hud_offset_rot_16x9          = -0.003585, 0.008668, 0
 		
 ![wpn_fal_sa58_osw_marchf]
         scope_zoom_factor                = 5
@@ -855,51 +962,51 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_marchf_hud]
-        aim_hud_offset_pos               = -0.071221, 0.003392, -0.122751
-        aim_hud_offset_pos_16x9          = -0.071221, 0.003392, -0.122751
-        aim_hud_offset_rot               = 0.004145, -0.003215, 0
-        aim_hud_offset_rot_16x9          = 0.004145, -0.003215, 0
+        aim_hud_offset_pos               = -0.084208, -0.004646, -0.1662
+        aim_hud_offset_pos_16x9          = -0.084208, -0.004646, -0.1662
+        aim_hud_offset_rot               = -0.002926, 0.010389, 0
+        aim_hud_offset_rot_16x9          = -0.002926, 0.010389, 0
 		
 ![wpn_fal_sa58_osw_triji]
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_fal_sa58_osw_triji_hud]
-        aim_hud_offset_pos               = -0.07212, 0.0009, -0.112178
-        aim_hud_offset_pos_16x9          = -0.07212, 0.0009, -0.112178
-        aim_hud_offset_rot               = 0.010948, -0.003509, 0
-        aim_hud_offset_rot_16x9          = 0.010948, -0.003509, 0
-        aim_hud_offset_alt_pos           = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_pos_16x9      = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_rot           = -0.012207, 0.019131, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.012207, 0.019131, 0.8
+        aim_hud_offset_pos               = -0.0829, -0.004432, -0.180953
+        aim_hud_offset_pos_16x9          = -0.0829, -0.004432, -0.180953
+        aim_hud_offset_rot               = 0.003467, 0.003132, 0
+        aim_hud_offset_rot_16x9          = 0.003467, 0.003132, 0
+        aim_hud_offset_alt_pos           = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_pos_16x9      = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_rot           = -0.014907, 0.020632, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.014907, 0.020632, 0.78
 		
 ![wpn_fal_sa58_osw_spec_alt]
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_spec_alt_hud]
-        aim_hud_offset_pos               = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_pos_16x9          = -0.071352, 0.000678, -0.105762
-        aim_hud_offset_rot               = 0.004285, -0.003421, 0
-        aim_hud_offset_rot_16x9          = 0.004285, -0.003421, 0
-        aim_hud_offset_alt_pos           = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_pos_16x9      = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_rot           = -0.012207, 0.019131, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.012207, 0.019131, 0.8
+        aim_hud_offset_pos               = -0.084848, -0.007182, -0.167908
+        aim_hud_offset_pos_16x9          = -0.084848, -0.007182, -0.167908
+        aim_hud_offset_rot               = -0.002854, 0.010983, 0
+        aim_hud_offset_rot_16x9          = -0.002854, 0.010983, 0
+        aim_hud_offset_alt_pos           = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_pos_16x9      = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_rot           = -0.014907, 0.020632, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.014907, 0.020632, 0.78
 		
 ![wpn_fal_sa58_osw_mark8_rmr]
         scope_zoom_factor                = 15
 		scope_texture                    =
 		scope_dynamic_zoom               = on		
 ![wpn_fal_sa58_osw_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.071763, 0.000883, -0.111409
-        aim_hud_offset_pos_16x9          = -0.071763, 0.000883, -0.111409
-        aim_hud_offset_rot               = 0.004984, -0.003506, 0
-        aim_hud_offset_rot_16x9          = 0.004984, -0.003506, 0
-        aim_hud_offset_alt_pos           = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_pos_16x9      = -0.08748, -0.074347, -0.09
-        aim_hud_offset_alt_rot           = -0.012207, 0.019131, 0.8
-        aim_hud_offset_alt_rot_16x9      = -0.012207, 0.019131, 0.8
+        aim_hud_offset_pos               = -0.083033, -0.011666, -0.152381
+        aim_hud_offset_pos_16x9          = -0.083033, -0.011666, -0.152381
+        aim_hud_offset_rot               = -0.002188, 0.003162, 0
+        aim_hud_offset_rot_16x9          = -0.002188, 0.003162, 0
+        aim_hud_offset_alt_pos           = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_pos_16x9      = -0.089814, -0.081875, -0.09
+        aim_hud_offset_alt_rot           = -0.014907, 0.020632, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.014907, 0.020632, 0.78		
 ;==============================================================================
  ![wpn_fn2000_nimble]
 lewd_lens_hide_enabled       = true
