Single scope Sniper lens refinements. Shadow adjustments for Specter Scope.

--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -13,10 +13,10 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 
 ![wpn_sv98_hud]
-        aim_hud_offset_pos               = -0.085824, 0.015439, -0.16367
-        aim_hud_offset_pos_16x9          = -0.085824, 0.015439, -0.16367
-        aim_hud_offset_rot               = 0.003716, -0.003651, 0
-        aim_hud_offset_rot_16x9          = 0.003716, -0.003651, 0
+        aim_hud_offset_pos               = -0.085717, 0.015455, -0.163809
+        aim_hud_offset_pos_16x9          = -0.085717, 0.015455, -0.163809
+        aim_hud_offset_rot               = 0.003644, -0.003781, 0
+        aim_hud_offset_rot_16x9          = 0.003644, -0.003781, 0
 ;==============================================================================
 ![wpn_k98_mod]
 	3ds_reticle_size = 9.5
@@ -35,10 +35,10 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
 
 ![wpn_k98_mod_hud]
-        aim_hud_offset_pos               = -0.077979, -0.002142, -0.159607
-        aim_hud_offset_pos_16x9          = -0.077979, -0.002142, -0.159607
-        aim_hud_offset_rot               = -0.009716, 0.004957, 0
-        aim_hud_offset_rot_16x9          = -0.009716, 0.004957, 0
+        aim_hud_offset_pos               = -0.077966, -0.00207, -0.160677
+        aim_hud_offset_pos_16x9          = -0.077966, -0.00207, -0.160677
+        aim_hud_offset_rot               = -0.009195, 0.005257, 0
+        aim_hud_offset_rot_16x9          = -0.009195, 0.005257, 0
 ;==============================================================================
 ![wpn_k98_mod_silen98]
 	3ds_reticle_size = 9.5
@@ -85,11 +85,10 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 ![wpn_remington700_hud]		
-        aim_hud_offset_pos               = -0.077786, 0.015214, -0.127068
-        aim_hud_offset_pos_16x9          = -0.077786, 0.015214, -0.127068
-        aim_hud_offset_rot               = -0.00911, 0.005552, 0
-        aim_hud_offset_rot_16x9          = -0.00911, 0.005552, 0
-		
+        aim_hud_offset_pos               = -0.077799, 0.01525, -0.127352
+        aim_hud_offset_pos_16x9          = -0.077799, 0.01525, -0.127352
+        aim_hud_offset_rot               = -0.009092, 0.005266, 0
+        aim_hud_offset_rot_16x9          = -0.009092, 0.005266, 0
 ;==============================================================================		
 ![wpn_remington700_mod_x_gen3]
 	3ds_reticle_size = 6
@@ -104,10 +103,10 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
 ![wpn_remington700_mod_x_gen3_hud]		
-        aim_hud_offset_pos               = -0.075992, -0.005765, -0.140285
-        aim_hud_offset_pos_16x9          = -0.075992, -0.005765, -0.140285
-        aim_hud_offset_rot               = -0.009196, 0.005468, 0
-        aim_hud_offset_rot_16x9          = -0.009196, 0.005468, 0
+        aim_hud_offset_pos               = -0.076018, -0.005675, -0.139956
+        aim_hud_offset_pos_16x9          = -0.076018, -0.005675, -0.139956
+        aim_hud_offset_rot               = -0.009124, 0.00539, 0
+        aim_hud_offset_rot_16x9          = -0.009124, 0.00539, 0
 ;==============================================================================	
 ![wpn_remington700_magpul_pro]		
 	3ds_reticle_size = 6
@@ -122,10 +121,10 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
 ![wpn_remington700_magpul_pro_hud]		
-        aim_hud_offset_pos               = -0.077799, 0.006312, -0.154595
-        aim_hud_offset_pos_16x9          = -0.077799, 0.006312, -0.154595
-        aim_hud_offset_rot               = -0.008904, 0.005712, 0
-        aim_hud_offset_rot_16x9          = -0.008904, 0.005712, 0
+        aim_hud_offset_pos               = -0.077773, 0.00624, -0.15426
+        aim_hud_offset_pos_16x9          = -0.077773, 0.00624, -0.15426
+        aim_hud_offset_rot               = -0.008886, 0.005517, 0
+        aim_hud_offset_rot_16x9          = -0.008886, 0.005517, 0
 ;==============================================================================	
 ![wpn_remington700_archangel]
 	3ds_reticle_size = 6
@@ -140,8 +139,8 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false			
 ![wpn_remington700_archangel_hud]		
-        aim_hud_offset_pos               = -0.078074, 0.019368, -0.138063
-        aim_hud_offset_pos_16x9          = -0.078074, 0.019368, -0.138063
+        aim_hud_offset_pos               = -0.078074, 0.019368, -0.138326
+        aim_hud_offset_pos_16x9          = -0.078074, 0.019368, -0.138326
         aim_hud_offset_rot               = -0.008891, 0.005491, 0
         aim_hud_offset_rot_16x9          = -0.008891, 0.005491, 0
 ;==============================================================================	
@@ -158,14 +157,15 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false			
 ![wpn_remington700_lapua700_hud]
-        aim_hud_offset_pos               = -0.077799, 0.006312, -0.154595
-        aim_hud_offset_pos_16x9          = -0.077799, 0.006312, -0.154595
-        aim_hud_offset_rot               = -0.008904, 0.005712, 0
-        aim_hud_offset_rot_16x9          = -0.008904, 0.005712, 0	
+        aim_hud_offset_pos               = -0.077773, 0.00624, -0.15426
+        aim_hud_offset_pos_16x9          = -0.077773, 0.00624, -0.15426
+        aim_hud_offset_rot               = -0.008886, 0.005517, 0
+        aim_hud_offset_rot_16x9          = -0.008886, 0.005517, 0
 ;==============================================================================	
 ![wpn_steyr_scout_big]
 	3ds_reticle_size = 10		
-	3ds_shadow_project = 2.78				
+	3ds_shadow_project = 2.78		
+	3ds_ffp_min_zoom = 12
         scope_zoom_factor                = 7.5
 		min_scope_zoom_factor			 = 30		
         scope_texture                    =	
@@ -178,12 +178,13 @@ lewd_lens_hide_aim_mode      = true, false, false
 item_visual                              = anomaly_weapons\wpn_steyr_scout\wpn_steyr_scout_big_hud.ogf
         aim_hud_offset_pos               = -0.062727, 0.005624, -0.157918
         aim_hud_offset_pos_16x9          = -0.062727, 0.005624, -0.157918
-        aim_hud_offset_rot               = 0.027349, 0.027507, -0.0465
-        aim_hud_offset_rot_16x9          = 0.027349, 0.027507, -0.0465
+        aim_hud_offset_rot               = 0.027241, 0.027335, -0.0465
+        aim_hud_offset_rot_16x9          = 0.027241, 0.027335, -0.0465
 ;==============================================================================	
 ![wpn_steyr_scout]
 	3ds_reticle_size = 10		
-	3ds_shadow_project = 2.78		
+	3ds_shadow_project = 2.78	
+	3ds_ffp_min_zoom = 12		
         scope_zoom_factor                = 7.5
 		min_scope_zoom_factor			 = 30		
         scope_texture                    =	
@@ -196,8 +197,8 @@ lewd_lens_hide_aim_mode      = true, false, false
 item_visual                              = anomaly_weapons\wpn_steyr_scout\wpn_steyr_scout_big_hud.ogf
         aim_hud_offset_pos               = -0.062727, 0.005624, -0.157918
         aim_hud_offset_pos_16x9          = -0.062727, 0.005624, -0.157918
-        aim_hud_offset_rot               = 0.027349, 0.027507, -0.0465
-        aim_hud_offset_rot_16x9          = 0.027349, 0.027507, -0.0465
+        aim_hud_offset_rot               = 0.027241, 0.027335, -0.0465
+        aim_hud_offset_rot_16x9          = 0.027241, 0.027335, -0.0465
 ;==============================================================================	
 ![wpn_l96a1]	
 	3ds_reticle_size = 7
@@ -1596,8 +1597,8 @@ use_alt_aim_hud                   = true
 
 [wpn_g43_wpn_addon_scope_zf4_hud]:wpn_g43_hud
         item_visual                 = anomaly_weapons\wpn_g43\wpn_g43_zf4_hud.ogf
-        aim_hud_offset_pos               = -0.130605, 0.023017, -0.117337
-        aim_hud_offset_pos_16x9          = -0.130605, 0.023017, -0.117337
+        aim_hud_offset_pos               = -0.130605, 0.023017, -0.114838
+        aim_hud_offset_pos_16x9          = -0.130605, 0.023017, -0.114838
         aim_hud_offset_rot               = 0.003513, -0.003521, -0.001071
         aim_hud_offset_rot_16x9          = 0.003513, -0.003521, -0.001071
 
