sig550 custom scope fix

--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -2296,6 +2296,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 		scope_texture                    =
 		scope_dynamic_zoom               = off	
 ![wpn_sig550_custom_acog_hud]
+item_visual                              = anomaly_weapons\wpn_sig550\wpn_sig550_sk1_acog_hud.ogf
         aim_hud_offset_pos               = 0.023802, -0.028364, -0.009056
         aim_hud_offset_pos_16x9          = 0.023802, -0.028364, -0.009056
         aim_hud_offset_rot               = 0.060086, 0.00219, 0.00387
