Soviet scope adjustments

--- a/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -67,7 +67,7 @@
 	
 ![pso1m21] --PS02
 	3ds_reticle_size = 4
-	3ds_shadow_project = 4.2
+	3ds_shadow_project = 4.13
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red
@@ -75,7 +75,7 @@
 	
 ![pso2]
 	3ds_reticle_size = 4
-	3ds_shadow_project = 4.2
+	3ds_shadow_project = 4.13
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red
@@ -83,7 +83,7 @@
 	
 ![pritseldob] --PS02 RMR
 	3ds_reticle_size = 4
-	3ds_shadow_project = 4.2
+	3ds_shadow_project = 4.13
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red
@@ -107,7 +107,7 @@
 		
 ![wpn_addon_scope_pu]
 	3ds_reticle_size = 2.5
-	3ds_shadow_project = 3.85
+	3ds_shadow_project = 4
 	magnification = 3.5
 	
 ![wpn_addon_scope_zf4]
@@ -138,6 +138,11 @@
 	3ds_type = 3
 	magnification = 2.8	
 
+![gee36]
+	3ds_reticle_size = 4.5
+	3ds_shadow_project = 3.8	
+	magnification = 3
+	
 ![side]
 	3ds_reticle_size = 2.5
 	3ds_shadow_project = 3.85	
@@ -182,7 +187,7 @@
 	
 ![spec_alt] --Dynamic
 	3ds_reticle_size = 7.3
-	3ds_shadow_project = 3.2
+	3ds_shadow_project = 3.08
 	3ds_ffp_min_zoom = 46		
 	3ds_type = 5
 	ms_count = 2
