--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -538,22 +538,26 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = zatvor2
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
+
 ![wpn_ash12_sup]
+parent_section = wpn_ash12_sup
 	3ds_reticle_size = 7.3
-	3ds_shadow_project = 3.2
-	3ds_ffp_min_zoom = 46		
+	3ds_shadow_project = 3.08
+	3ds_ffp_min_zoom = 46	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 4		
         scope_zoom_factor                = 30
         scope_texture                    =
+        scope_dynamic_zoom          = on	
+		
 laser_status = true		
 ![wpn_ash12_sup_hud]
-        aim_hud_offset_pos               = -0.105875, 0.004502, -0.108463
-        aim_hud_offset_pos_16x9          = -0.105875, 0.004502, -0.108463
-        aim_hud_offset_rot               = 0.003124, 0.004953, 0.0188
-        aim_hud_offset_rot_16x9          = 0.003124, 0.004953, 0.0188
+        aim_hud_offset_pos               = -0.105914, 0.004556, -0.129479
+        aim_hud_offset_pos_16x9          = -0.105914, 0.004556, -0.129479
+        aim_hud_offset_rot               = 0.00334, 0.005019, 0.0188
+        aim_hud_offset_rot_16x9          = 0.00334, 0.005019, 0.0188
 		
 [wpn_ash12_cortex]:wpn_ash12
 visual                                   = dynamics\weapons\wpn_ash12\wpn_ash12.ogf
@@ -2140,8 +2144,8 @@ use_alt_aim_hud		=	true
         scope_zoom_factor                = 12
         scope_texture                    =
 ![wpn_scar_siber_m2_gauss_sight_hud]
-        aim_hud_offset_pos               = -0.052411, -0.000473, -0.076159
-        aim_hud_offset_pos_16x9          = -0.052411, -0.000473, -0.076159
+        aim_hud_offset_pos               = -0.052506, 0.009558, -0.083556
+        aim_hud_offset_pos_16x9          = -0.052506, 0.009558, -0.083556
         aim_hud_offset_rot               = 0.017165, 0.002866, 0
         aim_hud_offset_rot_16x9          = 0.017165, 0.002866, 0
         aim_hud_offset_alt_pos           = -0.081648, -0.061619, 0.01
@@ -2750,8 +2754,8 @@ scope_status                             = 1
         scope_zoom_factor                = 42.86
         scope_texture                    =	
 ![wpn_abakan_n_1p78gs_hud]
-        aim_hud_offset_pos               = -0.074696, -0.004387, -0.076879
-        aim_hud_offset_pos_16x9          = -0.074696, -0.004387, -0.076879
+        aim_hud_offset_pos               = -0.074631, -0.004387, -0.076879
+        aim_hud_offset_pos_16x9          = -0.074631, -0.004387, -0.076879
         aim_hud_offset_rot               = 0.000659, -0.003607, -0.015
         aim_hud_offset_rot_16x9          = 0.000659, -0.003607, -0.015
 		
@@ -3162,7 +3166,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 		
 ![wpn_ak105_shakal]
 	3ds_reticle_size = 12
-	3ds_shadow_project = 3.8
+	3ds_shadow_project = 3.08
 	magnification = 4	
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -3567,19 +3571,19 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_n_1p29_hud]
-        aim_hud_offset_pos               = -0.079251, 0.014881, -0.11461
-        aim_hud_offset_pos_16x9          = -0.079251, 0.014881, -0.11461
-        aim_hud_offset_rot               = -0.00346, -0.012369, -0.01
-        aim_hud_offset_rot_16x9          = -0.00346, -0.012369, -0.01
+        aim_hud_offset_pos               = -0.082888, 0.003033, -0.103955
+        aim_hud_offset_pos_16x9          = -0.082888, 0.003033, -0.103955
+        aim_hud_offset_rot               = -0.003173, -0.012289, -0.01
+        aim_hud_offset_rot_16x9          = -0.003173, -0.012289, -0.01
 		
 ![wpn_ak74_n_usp1]
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_n_usp1_hud]
-        aim_hud_offset_pos               = -0.079251, 0.014881, -0.11461
-        aim_hud_offset_pos_16x9          = -0.079251, 0.014881, -0.11461
-        aim_hud_offset_rot               = -0.00346, -0.012369, -0.01
-        aim_hud_offset_rot_16x9          = -0.00346, -0.012369, -0.01
+        aim_hud_offset_pos               = -0.082888, 0.003033, -0.103955
+        aim_hud_offset_pos_16x9          = -0.082888, 0.003033, -0.103955
+        aim_hud_offset_rot               = -0.003173, -0.012289, -0.01
+        aim_hud_offset_rot_16x9          = -0.003173, -0.012289, -0.01
 		
 [wpn_ak74_n_pso1m21]:wpn_ak74_n_pso2	
 1icon_layer			    = pso1m21		
@@ -3600,10 +3604,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_pmc_1p29_hud]
-        aim_hud_offset_pos               = -0.084583, 0.015713, -0.114756
-        aim_hud_offset_pos_16x9          = -0.084583, 0.015713, -0.114756
-        aim_hud_offset_rot               = 0.009926, 0.009841, -0.01
-        aim_hud_offset_rot_16x9          = 0.009926, 0.009841, -0.01
+        aim_hud_offset_pos               = -0.087852, 0.00404, -0.101488
+        aim_hud_offset_pos_16x9          = -0.087852, 0.00404, -0.101488
+        aim_hud_offset_rot               = 0.010556, 0.010219, -0.01
+        aim_hud_offset_rot_16x9          = 0.010556, 0.010219, -0.01
         aim_hud_offset_alt_pos           = -0.118, -0.04, -0.02
         aim_hud_offset_alt_pos_16x9      = -0.118, -0.04, -0.02
         aim_hud_offset_alt_rot           = 0.0048, 0.0181, 0.6
@@ -3613,10 +3617,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_pmc_usp1_hud]
-        aim_hud_offset_pos               = -0.084583, 0.015713, -0.114756
-        aim_hud_offset_pos_16x9          = -0.084583, 0.015713, -0.114756
-        aim_hud_offset_rot               = 0.009926, 0.009841, -0.01
-        aim_hud_offset_rot_16x9          = 0.009926, 0.009841, -0.01
+        aim_hud_offset_pos               = -0.087852, 0.00404, -0.101488
+        aim_hud_offset_pos_16x9          = -0.087852, 0.00404, -0.101488
+        aim_hud_offset_rot               = 0.010556, 0.010219, -0.01
+        aim_hud_offset_rot_16x9          = 0.010556, 0.010219, -0.01
         aim_hud_offset_alt_pos           = -0.118, -0.04, -0.02
         aim_hud_offset_alt_pos_16x9      = -0.118, -0.04, -0.02
         aim_hud_offset_alt_rot           = 0.0048, 0.0181, 0.6
