--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -611,36 +611,36 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_svd_m1_1p29_hud]
-        aim_hud_offset_pos               = -0.078706, -0.010425, -0.093641
-        aim_hud_offset_pos_16x9          = -0.078706, -0.010425, -0.093641
-        aim_hud_offset_rot               = -0.000284, -0.001945, 0
-        aim_hud_offset_rot_16x9          = -0.000284, -0.001945, 0
+        aim_hud_offset_pos               = -0.074611, 0.004668, -0.11005
+        aim_hud_offset_pos_16x9          = -0.074611, 0.004668, -0.11005
+        aim_hud_offset_rot               = -0.000284, -0.001958, 0
+        aim_hud_offset_rot_16x9          = -0.000284, -0.001958, 0
 		
 ![wpn_svd_m1_usp1]
         scope_zoom_factor                = 30
         scope_texture                    =		
 ![wpn_svd_m1_usp1_hud]		
-        aim_hud_offset_pos               = -0.078706, -0.010425, -0.093641
-        aim_hud_offset_pos_16x9          = -0.078706, -0.010425, -0.093641
-        aim_hud_offset_rot               = -0.000284, -0.001945, 0
-        aim_hud_offset_rot_16x9          = -0.000284, -0.001945, 0
+        aim_hud_offset_pos               = -0.074611, 0.004668, -0.11005
+        aim_hud_offset_pos_16x9          = -0.074611, 0.004668, -0.11005
+        aim_hud_offset_rot               = -0.000284, -0.001958, 0
+        aim_hud_offset_rot_16x9          = -0.000284, -0.001958, 0
 
 ![wpn_svd_m1_1p59]		
         scope_zoom_factor                = 12
 		min_scope_zoom_factor			 = 45		
         scope_texture                    =	
 ![wpn_svd_m1_1p59_hud]		
-        aim_hud_offset_pos               = -0.06059, 0.008417, -0.104262
-        aim_hud_offset_pos_16x9          = -0.06059, 0.008417, -0.104262
-        aim_hud_offset_rot               = -0.00134, -0.001162, 0
-        aim_hud_offset_rot_16x9          = -0.00134, -0.001162, 0
+        aim_hud_offset_pos               = -0.05997, 0.018237, -0.119324
+        aim_hud_offset_pos_16x9          = -0.05997, 0.018237, -0.119324
+        aim_hud_offset_rot               = -0.001196, -0.001305, 0
+        aim_hud_offset_rot_16x9          = -0.001196, -0.001305, 0
 
 ![wpn_svd_m1_ps01]
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svd_m1_ps01_hud]		
-        aim_hud_offset_pos               = -0.065228, 0.016381, -0.069993
-        aim_hud_offset_pos_16x9          = -0.065228, 0.016381, -0.069993
+        aim_hud_offset_pos               = -0.063356, 0.026696, -0.076037
+        aim_hud_offset_pos_16x9          = -0.063356, 0.026696, -0.076037
         aim_hud_offset_rot               = -0.000887, -0.002109, -0.003
         aim_hud_offset_rot_16x9          = -0.000887, -0.002109, -0.003
 		
@@ -648,26 +648,26 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svd_m1_pso2_hud]
-        aim_hud_offset_pos               = -0.063255, 0.013731, -0.085707
-        aim_hud_offset_pos_16x9          = -0.063255, 0.013731, -0.085707
-        aim_hud_offset_rot               = -0.000841, -0.002082, -0.003
-        aim_hud_offset_rot_16x9          = -0.000841, -0.002082, -0.003
+        aim_hud_offset_pos               = -0.062474, 0.018612, -0.083655
+        aim_hud_offset_pos_16x9          = -0.062474, 0.018612, -0.083655
+        aim_hud_offset_rot               = -0.001021, -0.001655, -0.003
+        aim_hud_offset_rot_16x9          = -0.001021, -0.001655, -0.003
 		
 ![wpn_svd_m1_pso1m21]
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svd_m1_pso1m21_hud]		
-        aim_hud_offset_pos               = -0.063255, 0.013731, -0.085707
-        aim_hud_offset_pos_16x9          = -0.063255, 0.013731, -0.085707
-        aim_hud_offset_rot               = -0.000841, -0.002082, -0.003
-        aim_hud_offset_rot_16x9          = -0.000841, -0.002082, -0.003
+        aim_hud_offset_pos               = -0.062474, 0.018612, -0.083655
+        aim_hud_offset_pos_16x9          = -0.062474, 0.018612, -0.083655
+        aim_hud_offset_rot               = -0.001021, -0.001655, -0.003
+        aim_hud_offset_rot_16x9          = -0.001021, -0.001655, -0.003
 		
 ![wpn_svd_m1_1p78gs]
         scope_zoom_factor                = 42.86
         scope_texture                    =	
 ![wpn_svd_m1_1p78gs_hud]		
-        aim_hud_offset_pos               = -0.076529, 0.001154, -0.083235
-        aim_hud_offset_pos_16x9          = -0.076529, 0.001154, -0.083235
+        aim_hud_offset_pos               = -0.072514, 0.015907, -0.104354
+        aim_hud_offset_pos_16x9          = -0.072514, 0.015907, -0.104354
         aim_hud_offset_rot               = -0.000494, -0.001968, 0
         aim_hud_offset_rot_16x9          = -0.000494, -0.001968, 0
 		
@@ -677,10 +677,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on	
 ![wpn_svd_m1_1pn93_hud]
-        aim_hud_offset_pos               = -0.064579, -0.004207, -0.07868
-        aim_hud_offset_pos_16x9          = -0.064579, -0.004207, -0.07868
-        aim_hud_offset_rot               = -0.001133, -0.002123, -0.003
-        aim_hud_offset_rot_16x9          = -0.001133, -0.002123, -0.003
+        aim_hud_offset_pos               = -0.063701, 0.003215, -0.089272
+        aim_hud_offset_pos_16x9          = -0.063701, 0.003215, -0.089272
+        aim_hud_offset_rot               = -0.001331, -0.001868, -0.003
+        aim_hud_offset_rot_16x9          = -0.001331, -0.001868, -0.003
 		
 ![wpn_svd_m1_1pn93n2_1gs]
         scope_zoom_factor                = 30
@@ -688,10 +688,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on	
 ![wpn_svd_m1_1pn93n2_1gs_hud]
-        aim_hud_offset_pos               = -0.06051, 0.003781, -0.073557
-        aim_hud_offset_pos_16x9          = -0.06051, 0.003781, -0.073557
-        aim_hud_offset_rot               = -0.001204, -0.002017, -0.003
-        aim_hud_offset_rot_16x9          = -0.001204, -0.002017, -0.003
+        aim_hud_offset_pos               = -0.059889, 0.01143, -0.085687
+        aim_hud_offset_pos_16x9          = -0.059889, 0.01143, -0.085687
+        aim_hud_offset_rot               = -0.001348, -0.002044, -0.003
+        aim_hud_offset_rot_16x9          = -0.001348, -0.002044, -0.003
 ;==============================================================================		
 ![wpn_svds]
 lewd_lens_hide_enabled       = true	
@@ -702,19 +702,19 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_svds_1p29_hud]
-        aim_hud_offset_pos               = -0.077587, -0.009235, -0.082151
-        aim_hud_offset_pos_16x9          = -0.077587, -0.009235, -0.082151
-        aim_hud_offset_rot               = -0.000877, -0.002017, 0
-        aim_hud_offset_rot_16x9          = -0.000877, -0.002017, 0
+        aim_hud_offset_pos               = -0.075318, -0.000531, -0.090097
+        aim_hud_offset_pos_16x9          = -0.075318, -0.000531, -0.090097
+        aim_hud_offset_rot               = 0.000718, -0.001569, 0
+        aim_hud_offset_rot_16x9          = 0.000718, -0.001569, 0
 		
 ![wpn_svds_usp1]		
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_svds_usp1_hud]
-        aim_hud_offset_pos               = -0.077587, -0.009235, -0.082151
-        aim_hud_offset_pos_16x9          = -0.077587, -0.009235, -0.082151
-        aim_hud_offset_rot               = -0.000877, -0.002017, 0
-        aim_hud_offset_rot_16x9          = -0.000877, -0.002017, 0
+        aim_hud_offset_pos               = -0.075318, -0.000531, -0.090097
+        aim_hud_offset_pos_16x9          = -0.075318, -0.000531, -0.090097
+        aim_hud_offset_rot               = 0.000718, -0.001569, 0
+        aim_hud_offset_rot_16x9          = 0.000718, -0.001569, 0
 
 ![wpn_svds_1p59]		
         scope_zoom_factor                = 12
@@ -730,8 +730,8 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svds_ps01_hud]		
-        aim_hud_offset_pos               = -0.063941, 0.01748, -0.057245
-        aim_hud_offset_pos_16x9          = -0.063941, 0.01748, -0.057245
+        aim_hud_offset_pos               = -0.063458, 0.012865, -0.063152
+        aim_hud_offset_pos_16x9          = -0.063458, 0.012865, -0.063152
         aim_hud_offset_rot               = -0.000991, -0.002281, -0.003
         aim_hud_offset_rot_16x9          = -0.000991, -0.002281, -0.003
         aim_hud_offset_alt_pos           = -0.072995, 0.035329, -0.06
@@ -743,28 +743,28 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svds_pso2_hud]
-        aim_hud_offset_pos               = -0.061994, 0.014707, -0.080872
-        aim_hud_offset_pos_16x9          = -0.061994, 0.014707, -0.080872
-        aim_hud_offset_rot               = -0.000842, -0.002031, 0
-        aim_hud_offset_rot_16x9          = -0.000842, -0.002031, 0
+        aim_hud_offset_pos               = -0.061981, 0.014763, -0.080044
+        aim_hud_offset_pos_16x9          = -0.061981, 0.014763, -0.080044
+        aim_hud_offset_rot               = -0.000806, -0.002275, 0
+        aim_hud_offset_rot_16x9          = -0.000806, -0.002275, 0
 		
 ![wpn_svds_pso1m21]
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svds_pso1m21_hud]		
-        aim_hud_offset_pos               = -0.061994, 0.014707, -0.080872
-        aim_hud_offset_pos_16x9          = -0.061994, 0.014707, -0.080872
-        aim_hud_offset_rot               = -0.000842, -0.002031, 0
-        aim_hud_offset_rot_16x9          = -0.000842, -0.002031, 0
+        aim_hud_offset_pos               = -0.061981, 0.014763, -0.080044
+        aim_hud_offset_pos_16x9          = -0.061981, 0.014763, -0.080044
+        aim_hud_offset_rot               = -0.000806, -0.002275, 0
+        aim_hud_offset_rot_16x9          = -0.000806, -0.002275, 0
 		
 ![wpn_svds_1p78gs]
         scope_zoom_factor                = 42.86
         scope_texture                    =	
 ![wpn_svds_1p78gs_hud]		
-        aim_hud_offset_pos               = -0.075745, 0.002077, -0.074503
-        aim_hud_offset_pos_16x9          = -0.075745, 0.002077, -0.074503
-        aim_hud_offset_rot               = -0.001062, -0.00218, 0
-        aim_hud_offset_rot_16x9          = -0.001062, -0.00218, 0
+        aim_hud_offset_pos               = -0.07463, 0.005699, -0.079832
+        aim_hud_offset_pos_16x9          = -0.07463, 0.005699, -0.079832
+        aim_hud_offset_rot               = -0.001044, -0.001798, 0
+        aim_hud_offset_rot_16x9          = -0.001044, -0.001798, 0
 		
 ![wpn_svds_1pn93]
         scope_zoom_factor                = 30
@@ -772,10 +772,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 		scope_dynamic_zoom               = on	
 		nv_scope_status 				 = 0		
 ![wpn_svds_1pn93_hud]
-        aim_hud_offset_pos               = -0.064155, -0.003142, -0.06724
-        aim_hud_offset_pos_16x9          = -0.064155, -0.003142, -0.06724
-        aim_hud_offset_rot               = -0.001062, -0.002652, -0.003
-        aim_hud_offset_rot_16x9          = -0.001062, -0.002652, -0.003
+        aim_hud_offset_pos               = -0.063714, -0.002962, -0.072208
+        aim_hud_offset_pos_16x9          = -0.063714, -0.002962, -0.072208
+        aim_hud_offset_rot               = -0.001584, -0.001772, -0.003
+        aim_hud_offset_rot_16x9          = -0.001584, -0.001772, -0.003
 		
 ![wpn_svds_1pn93n2_1gs]
         scope_zoom_factor                = 30
@@ -783,10 +783,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 		scope_dynamic_zoom               = on	
 		nv_scope_status 				 = 0	
 ![wpn_svds_1pn93n2_1gs_hud]
-        aim_hud_offset_pos               = -0.05929, 0.004988, -0.064974
-        aim_hud_offset_pos_16x9          = -0.05929, 0.004988, -0.064974
-        aim_hud_offset_rot               = -0.001062, -0.002496, -0.003
-        aim_hud_offset_rot_16x9          = -0.001062, -0.002496, -0.003
+        aim_hud_offset_pos               = -0.059389, 0.004914, -0.068297
+        aim_hud_offset_pos_16x9          = -0.059389, 0.004914, -0.068297
+        aim_hud_offset_rot               = -0.00135, -0.002036, -0.003
+        aim_hud_offset_rot_16x9          = -0.00135, -0.002036, -0.003
 ;==============================================================================	
 ![wpn_svds_pmc]
 lewd_lens_hide_enabled       = true	
@@ -914,15 +914,17 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_svu_1p29]
         scope_zoom_factor                = 30
         scope_texture                    =	
+		scope_dynamic_zoom				 = off
 ![wpn_svu_1p29_hud]
-        aim_hud_offset_pos               = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_pos_16x9          = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_rot               = 0.070758, 0.033253, -0.02
-        aim_hud_offset_rot_16x9          = 0.070758, 0.033253, -0.02
+        aim_hud_offset_pos               = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_pos_16x9          = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_rot               = 0.070722, 0.033015, -0.02
+        aim_hud_offset_rot_16x9          = 0.070722, 0.033015, -0.02
 		
 ![wpn_svu_ps01]
         scope_zoom_factor                = 30
         scope_texture                    =
+		scope_dynamic_zoom				 = off		
 ![wpn_svu_pso1_hud]
         aim_hud_offset_pos               = -0.056146, 0.022647, -0.165632
         aim_hud_offset_pos_16x9          = -0.056146, 0.022647, -0.165632
@@ -938,10 +940,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svu_alt_1p29_hud]
-        aim_hud_offset_pos               = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_pos_16x9          = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_rot               = 0.070758, 0.033253, -0.02
-        aim_hud_offset_rot_16x9          = 0.070758, 0.033253, -0.02
+        aim_hud_offset_pos               = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_pos_16x9          = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_rot               = 0.070722, 0.033015, -0.02
+        aim_hud_offset_rot_16x9          = 0.070722, 0.033015, -0.02
 		
 ![wpn_svu_alt_ps01]
         scope_zoom_factor                = 30
@@ -961,10 +963,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svu_nimble_1p29_hud]
-        aim_hud_offset_pos               = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_pos_16x9          = -0.068587, 0.002757, -0.283085
-        aim_hud_offset_rot               = 0.070758, 0.033253, -0.02
-        aim_hud_offset_rot_16x9          = 0.070758, 0.033253, -0.02
+        aim_hud_offset_pos               = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_pos_16x9          = -0.068982, 0.002039, -0.233414
+        aim_hud_offset_rot               = 0.070722, 0.033015, -0.02
+        aim_hud_offset_rot_16x9          = 0.070722, 0.033015, -0.02
 		
 ![wpn_svu_nimble_ps01]
         scope_zoom_factor                = 30
@@ -1466,8 +1468,8 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_mjolnir_acog_hud]
-        aim_hud_offset_pos               = -0.061338, 0.013727, -0.10815
-        aim_hud_offset_pos_16x9          = -0.061338, 0.013727, -0.10815
+        aim_hud_offset_pos               = -0.061325, 0.013655, -0.107509
+        aim_hud_offset_pos_16x9          = -0.061325, 0.013655, -0.107509
         aim_hud_offset_rot               = 0.009873, -0.003581, 0
         aim_hud_offset_rot_16x9          = 0.009873, -0.003581, 0
 		
@@ -1479,8 +1481,8 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
         aim_hud_offset_alt_rot           = -0.01093, -0.001433, 0.77
         aim_hud_offset_alt_rot_16x9      = -0.01093, -0.001433, 0.77
-        aim_hud_offset_pos               = -0.061338, 0.013727, -0.10815
-        aim_hud_offset_pos_16x9          = -0.061338, 0.013727, -0.10815
+        aim_hud_offset_pos               = -0.061325, 0.013655, -0.107509
+        aim_hud_offset_pos_16x9          = -0.061325, 0.013655, -0.107509
         aim_hud_offset_rot               = 0.009873, -0.003581, 0
         aim_hud_offset_rot_16x9          = 0.009873, -0.003581, 0
 		
